gcc/testsuite/rust/rustc/ui/issues/issue-6596-1.rs
macro_rules! e {
    ($inp:ident) => (
        $nonexistent
// { dg-error "" "" { target *-*-* } .-1 }
    );
}

fn main() {
    e!(foo);
}

